# padbound

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please.config.json
.github/workflows/: release-please.yml
examples/: demo_akai_apc_mini_mk2.py  demo_akai_lpd8.py  demo_presonus_atom.py  demo_x_touch_mini.py  demo_xjam.py
src/padbound/: __init__.py  callbacks.py  config.py  controller.py  controls.py  logging_config.py  midi_io.py  plugin.py  registry.py  state.py  utils.py
src/padbound/debug/: __init__.py  layout.py  messages.py  server.py  tui.py
src/padbound/plugins/: __init__.py  akai_apc_mini_mk2.py  akai_lpd8_mk2.py  behringer_x_touch_mini.py  example_midi_controller.py  example_pad_controller.py  generic_midi.py  presonus_atom.py  xjam.py
